Build template, Move content to front matter

--- a/co-creation-lab.html
+++ b/co-creation-lab.html
@@ -3,7 +3,31 @@ layout: default
 title: Co-Creation Lab
 excerpt: "A vision for reclaiming tech for the arts, culture, and activism through holistic co-creation"
 image: "/assets/images/social/c-lab.webp"
-order: 5
+description: "We believe building tech that's community-driven makes for richer futures and we're dedicated to helping communities leverage it."  
+tagline: "Tech that fosters access, autonomy, and sustainability"
+services:
+  - title: Project Design & Discovery
+    description: 
+      - "We offer in-depth strategic planning to build a solid foundation for each project, drawing on a human-centered design approach. We will meet with you to scope out the general needs and drill down into specific milestones that can be incrementally built in and tested."
+      - "Our systems thinking approach will ensure your project is able to pivot and change according to your needs without major reworking."
+    list:
+      - Project scoping
+      - Design thinking
+      - Systems thinking
+  - title: Software delivery at all project lifecycle stages
+    description: 
+      - "Software delivery at all project lifecycle stages: We can help with rapid prototyping and MVP development, long-term iterative software development, building product roadmaps, gathering user feedback, and week-to-week project management and coordination. We also have in-house expertise in Web Accessibility."
+    list:
+      - We primarily focus on dynamic web applications and static websites but have experience working with mobile and desktop app teams when necessary.
+      - Our team has deep knowledge of building and deploying distributed and decentralized applications across a variety of use cases and navigating trade offs between technologies to choose the right protocol for the job.
+      - Our developers have successfully deployed Smart contracts in the Ethereum blockchain ecosystem and have in-house expertise in data oracles
+  - title: Technical education
+    description: 
+      - "We have a track record of producing technical documentation, experience reports, and resources for emerging and established technologies, and general digital literacy initiatives."
+      - "Team members present at conferences and events and are skilled in translating complex technical concepts into easier to understand language."
+  - title: Governance
+    description: 
+      - "Leveraging both our co-operative governance expertise and our experience with DAOs (Decentralized Autonomous Organizations), we advise on how to productively engage communities and pass proposals and resolutions by fostering healthy debate and dialogue."
 ---
 
 <section class="mt4 ph3 pl5-l ">
@@ -24,106 +48,114 @@ order: 5
     </div>
   </header>
   <p class="pb3 f3 lh-copy measure-wide mb4">
-    "Technology" is often followed by the word "consumption" these days. It's come to represent a one-way relationship, not a place to create. A broadcast, not a meaningful dialogue. But tech doesn't have to only mean tracking, algorithms, and endless scrolling. Tools and practices like blockchain, peer-to-peer, open source, and decentralized governance are putting power back into the hands of the people that use it — so they might be more than users, but instead shapers of it. We at Hypha Worker Co-operative believe building tech that's community-driven makes for richer futures and we're dedicated to helping communities leverage it.
+    {{ page.description }}  
   </p>
-  <h4 class="f3 measure-wide mb0">
-    Announcing: Hypha’s newest practice area, Co-Creation Lab
-  </h4>
   <p class="pb3 f3 lh-copy measure-wide">
-    Today we’re announcing Hypha’s newest practice area, Co-Creation Lab, which exists to help community-oriented arts, culture, and activist organizations explore and use tech’s potential to the fullest, on their terms. Co-Creation Lab gives projects like the ones Hypha’s already done for years with clients and collaborators including HEK (House of Electronic Arts), Furtherfield, and MEDLab a formal home.
-</p>
-  <p class="pb3 f3 lh-copy measure-wide">
-    Like Hypha’s other practice areas, Co-Creation Lab will provide embedded, end-to-end partnership across the entire tech development lifecycle, from discovery and design to ongoing management.
+    {{ page.tagline }}
   </p>
-<h4 class="f3 measure-wide mb0">
-  Friendlier tech through co-creation, not extraction
-</h4>
-<p class="pb3 f3 lh-copy measure-wide">
-  To us, technology on fairer terms starts with our belief that how something’s made is just as important as the thing itself. Hypha is incorporated as a worker co-operative, meaning we operate as a democracy. When we say we work collaboratively with our clients, we mean it — cooperation is in our DNA. We center our projects around our clients’ needs, not ours. We’re a non-profit, so we aren’t motivated by pure profit or the use of any particular technology. What does motivate us? Sharing our clients’ goals as artists, activists, policymakers, and archivists.
-</p>
-<h4 class="f3 measure-wide mb4">
-  Tech that fosters access, autonomy, and sustainability</h4>
+  <h3
+  class="f2 f1-m f-subheadline-l accent normal sans-serif mb2 lh-solid"
+>
+  Services
+</h3>
 <div class="w-100 flex flex-wrap mb4 justify-around">
-
-  <div class="measure w-30-m w-30-l w100 pr3 mb3">
-<p class="pb3 f3 lh-copy measure-wide">
-  <b class="accent">Access</b> Technology has long been making it easier to access information and connection. But COVID brought new urgency to providing digital experiences and raised everyone’s bar for what they expect out of them. While cultural, arts, and activist organizations have been working to provide these new experiences, they’ve been facing access issues of their own — to the developer talent necessary to make their creative visions a reality and to get them done right at an affordable price. </p>
-  <p class="pb3 f3 lh-copy measure-wide">
-
-  Co-Creation Lab is meeting this demand with an approach that teases out what clients really need while educating them throughout the process.
-</p>
-  </div>
-  <div class="measure w-30-m w-30-l w100 pr3 pl3 mb3"> 
-
-<p class="pb3 f3 lh-copy measure-wide">
-  <b  class="accent">Autonomy</b> We believe that software should serve, even enhance or extend, our clients’ ends. On top of that, we believe that their code should belong to them, give them control, and stay well-functioning for a long time. Often, organizations have to give up ownership to make their digital projects come to life. But using technology that can be permanently altered or taken down by a third party, or whose data is vulnerable to being misused, shouldn’t be accepted as the cost of doing business. </p>
-  <p class="pb3 f3 lh-copy measure-wide">
-    Co-Creation Lab’s team features industry-leading expertise on the peer-to-peer and decentralized technologies that dramatically limit these risks.
-  </p>
-  </div>
-  <div class="measure w-30-m w-30-l w100 pl3 mb3">
-
-  <p class="pb3 f3 lh-copy measure-wide">
-    <b class="accent">Sustainability</b> So much of today’s technology can be short-lived, with products and projects disappearing overnight. A lot of our work is experimental, done for boundary-pushing organizations, so it doesn’t need it to last forever to be considered a success. But the end of client tech projects should be up to our clients — not because it’s no longer working or they ran out of the resources to support it. For everything we build, maintenance and affordability are top priorities.
-   </p>
-   <p class="pb3 f3 lh-copy measure-wide">
-    Beyond being a fantasy, necessary evil, or outright enemy, technology can be a valuable tool for connection and positive change. But the way it’s made must be more inclusive and informed: no small feat. Co-Creation Lab was started to tackle this challenge. We aim to show the organizations whose work we admire most that tech can be empowering — helping them reach more people in deeper ways, reliably and for generations to come.
-   </p>
+  {% for service in page.services %}
+    <div class="w-45 w-100-s w100 pr3 mb3">
+      <h4 class="f3 measure-wide mb0 lh-copy accent">{{ service.title }}</h4>
+      {% for paragraph in service.description %}
+        <p class="pb3 f3 lh-copy measure-wide">{{ paragraph }}</p>
+      {% endfor %}
+      {% if service.list %}
+        <ul class="pb3 f3 lh-copy measure-wide">
+          {% for item in service.list %}
+            <li>{{ item }}</li>
+          {% endfor %}
+        </ul>
+      {% endif %}
+    </div>
+  {% endfor %}
 </div>
 </section>
 <section>
-  <h3 class="f2 f1-m f-subheadline-l accent normal sans-serif mb4 lh-solid">Our past work</h3>
-  <div class="flex flex-wrap justify-around mb4 pv4">
-        <div class="w-45 w-100-s flex-column justify-left items-left mb4 tl pl3-m pr3-m">
-            <div class="relative mb4">
-              <h4 class="f3 measure-wide mb0">Helping Basel’s HEK build digital community with the world’s first tokenized museum membership
-              </h4>
-              <p  class="pb3 f3 lh-copy measure-wide">
-                Switzerland’s HEK (House of Electronic Arts) has been the leading museum for digital art, media, and culture since 2011. As a center of creative technology, HEK aims to be at the forefront of what’s relevant, willingly pushing into areas that are unknown and undefined — areas that include blockchain and Web3.
-              </p>
-              <h4 class="f3 measure-wide mb0">
-                Turning standard museum membership into an experiment in digital community engagement
-              </h4>
-              <p class="pb3 f3 lh-copy measure-wide">
-                Even though HEK had done Web3-related projects by 2023, the team had the feeling that they were behind on the community-building potential of the technology. At the same time, HEK wanted to evolve its membership program beyond simply offering free museum entrance for 25 francs a year. Putting these two opportunities together, the vision for Friends of HEK, a museum membership that gives HEK members online experiences and decision-making power, was born.
-              </p>
-              <p class="pb3 f3 lh-copy measure-wide">
-                <em>
-                  “Friends of HEK is an attempt to break down the usual hierarchies between institution and consumer.”
-                </em>
-              </p>
-              <p class="pb3 f3 lh-copy measure-wide">
-                Read more about <a class="accent link underline-hover" href='/co-creation-lab/hek'>our work with HEK</a>.
-              </p> 
-            </div>
+  <h3 class="f2 f1-m f-subheadline-l accent normal sans-serif mb2 lh-solid">Our past work</h3>
+  <div class="flex flex-wrap justify-left mb4 pv4">
+    {% assign matching_projects = site.work | where: "practice_area", page.title | where: "preview", true %}
+    {% for project in matching_projects %}
+      <div class="w-33-l w-50-m w-100-s flex-column justify-left items-left mb4 tl pr5-l pl3-m pr3-m">
+        <div class="relative mb4">
+          <img class="relative" src="/assets/images/logos/logo-background.jpg" alt="logo"></img>
+          {% if project.logo %}
+            <img class="absolute top-0 left-0" src="{{ project.logo }}" alt="logo"></img>
+          {% else %}
+            <p class="absolute top-0 left-0 tc mt5 w-100 white f1 v-mid"><b>{{ project.title }}</b></p>
+          {% endif %}
         </div>
-        <div class="vertical-divider w-5">
-          <svg height="100%" width="100%">
-              <line x1="50%" y1="40" x2="50%" y2="90%" stroke="#9900fc" stroke-width="2" stroke-dasharray="16, 8"/>
-          </svg>
-      </div>
-            <div class="w-45 w-100-s flex-column justify-left items-left mb4 tl pl3-m pr3-m">
-              <div class="relative mb4">
-                <h4 class="f3 measure-wide mb0">Putting the “public” back in “public art” in one North London park and beyond
-                </h4>
-                <p  class="pb3 f3 lh-copy measure-wide">
-                  Furtherfield is an art gallery that’s been uniquely located in the heart of North London’s Finsbury Park since 2011. When COVID made its indoor space unmanageable, the Furtherfield team took it as an opportunity to reset its relationship with the Finsbury community. As a result, they not only brought their work outdoors, but also created CultureStake, a blockchain app that lets any cultural organization open up decision making to the public.
+        <h2 class="f3 sans-serif accent">{{ project.title }}</h2>
+        <div
+          class="mb2 f4 lh-copy"
+          id="{{ project.title }}"
+        >
+          <div 
+            class="project-content"
+            data-excerpt="{{ project.excerpt | escape }}"
+            data-content="{{ project.content | escape }}"
+            data-toggled="false"
+          >
+            {{ project.excerpt }}
+          </div>
   
-                </p>
-                <h4 class="f3 measure-wide mb0">
-                  Co-creating with the local community via information-rich voting on blockchain
-                </h4>
-                <p class="pb3 f3 lh-copy measure-wide">
-                  Formed in response to the celebrity and commercialization of London’s YBA scene in the 90’s, for almost three decades Furtherfield has embodied the grassroots DIY culture of the early web for artists. Even though the pandemic was the catalyst for CultureStake, the team had been ready to make a change. “We had a growing feeling that bringing art from our international network into this public space was us bestowing ‘good culture’ on a locality, and we were becoming increasingly uncomfortable with it,” co-founder Ruth Catlow explains. “We wanted to work more with the different communities that used this space to see how they might shape our programs and our organization, and realized we could ask them directly about what was important to them.”
-                </p>
-                <p class="pb3 f3 lh-copy measure-wide">
-                  <em>
-                    “We had a growing feeling that bringing work from our international network into this public space was us bestowing ‘good culture’ on a locality.”
-                  </em>
-                </p>
-                <p class="pb3 f3 lh-copy measure-wide">
-                  Read more about <a class="accent link underline-hover" href='/co-creation-lab/furtherfield'>our work with Furtherfield</a>.
-                </p> 
-              </div>
-            </div>
+
+            {% if project.content contains "<!-- more -->" %}
+              <span class="mv0 link accent pointer underline-hover w-fit"
+                tabindex="0"
+                role="button"
+                aria-expanded="false"
+                onclick="expandContent(this)"
+                onkeydown="handleKeydown(event, this)"
+              >
+                [expand]</span>
+            {% endif %}
+            {% if project.content contains "<!-- more -->" and project.case_study %}
+              &mdash;
+            {% endif %}
+            {% if project.case_study %}
+              {% assign practice_slug = page.title | downcase | replace: ' ', '-' %}
+              <a href="/{{ practice_slug }}/{{ project.case_study }}/" class="accent link underline-hover case-study-link">Read the case study</a>
+            {% endif %}
+          
+        </div>
+      </div>
+    {% endfor %}
+  </div>
 </section>
+
+<script>
+  function expandContent(toggleEl) {
+    const containerEl = toggleEl.parentElement;
+    const contentDiv = containerEl.querySelector('.project-content');
+    const excerpt = contentDiv.dataset.excerpt;
+    const content = contentDiv.dataset.content;
+    const caseStudyLink = containerEl.querySelector('.case-study-link');
+
+    let toggled = contentDiv.dataset.toggled === "true";
+    if (!toggled) {
+      contentDiv.innerHTML = content;
+      toggleEl.innerHTML = "[collapse]";
+      contentDiv.dataset.toggled = "true";
+      toggleEl.setAttribute("aria-expanded", "true");
+    } else {
+      contentDiv.innerHTML = excerpt;
+      toggleEl.innerHTML = "[expand]";
+      contentDiv.dataset.toggled = "false";
+      toggleEl.setAttribute("aria-expanded", "false");
+    }
+  }
+
+
+  function handleKeydown(event, el) {
+    if (event.key === "Enter" || event.key === " ") {
+      event.preventDefault();
+      expandContent(el);
+    }
+  }
+</script>
