--- a/co-creation-lab.html
+++ b/co-creation-lab.html
@@ -79,6 +79,13 @@ services:
 <section>
   <h3 class="f2 f1-m f-subheadline-l accent normal sans-serif mb2 lh-solid">Our past work</h3>
   <div class="flex flex-wrap justify-left mb4 pv4">
+    {% assign index_page = site.pages | where: "title", "Home" | first %}
+    {% assign practice_slug = '' %}
+    {% for practice in index_page.what_we_do %}
+      {% if practice.title == page.title %}
+        {% assign practice_slug = practice.slug %}
+      {% endif %}
+    {% endfor %}
     {% assign matching_projects = site.work | where: "practice_area", page.title | where: "preview", true %}
     {% for project in matching_projects %}
       <div class="w-33-l w-50-m w-100-s flex-column justify-left items-left mb4 tl pr5-l pl3-m pr3-m">
@@ -119,10 +126,8 @@ services:
               &mdash;
             {% endif %}
             {% if project.case_study %}
-              {% assign practice_slug = page.title | downcase | replace: ' ', '-' %}
               <a href="/{{ practice_slug }}/{{ project.case_study }}/" class="accent link underline-hover case-study-link">Read the case study</a>
             {% endif %}
-          
         </div>
       </div>
     {% endfor %}
