Update Co-Creation Lab page to use layout

--- a/co-creation-lab.html
+++ b/co-creation-lab.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: practice_area
 title: Co-Creation Lab
 excerpt: "A vision for reclaiming tech for the arts, culture, and activism through holistic co-creation"
 image: "/assets/images/social/c-lab.webp"
@@ -29,138 +29,3 @@ services:
     description: 
       - "Leveraging both our co-operative governance expertise and our experience with DAOs (Decentralized Autonomous Organizations), we advise on how to productively engage communities and pass proposals and resolutions by fostering healthy debate and dialogue."
 ---
-
-<section class="mt4 ph3 pl5-l ">
-  <header class="">
-    <div class="flex-l items-center mv0">
-      <div class="w-100-l mb2">
-        <h3
-          class="f2 f1-m f-subheadline-l accent normal sans-serif mb4 lh-solid"
-        >
-          {{ page.title }}
-        </h3>
-        <div class="f3 measure-wide dark-gray lh-copy mb0">
-          <h4 class="f3 measure-wide mb0">
-            {{ page.excerpt}}
-          </h4>
-        </div>
-      </div>
-    </div>
-  </header>
-  <p class="pb3 f3 lh-copy measure-wide mb4">
-    {{ page.description }}  
-  </p>
-  <p class="pb3 f3 lh-copy measure-wide">
-    {{ page.tagline }}
-  </p>
-  <h3
-  class="f2 f1-m f-subheadline-l accent normal sans-serif mb2 lh-solid"
->
-  Services
-</h3>
-<div class="w-100 flex flex-wrap mb4 justify-around">
-  {% for service in page.services %}
-    <div class="w-45 w-100-s w100 pr3 mb3">
-      <h4 class="f3 measure-wide mb0 lh-copy accent">{{ service.title }}</h4>
-      {% for paragraph in service.description %}
-        <p class="pb3 f3 lh-copy measure-wide">{{ paragraph }}</p>
-      {% endfor %}
-      {% if service.list %}
-        <ul class="pb3 f3 lh-copy measure-wide">
-          {% for item in service.list %}
-            <li>{{ item }}</li>
-          {% endfor %}
-        </ul>
-      {% endif %}
-    </div>
-  {% endfor %}
-</div>
-</section>
-<section>
-  <h3 class="f2 f1-m f-subheadline-l accent normal sans-serif mb2 lh-solid">Our past work</h3>
-  <div class="flex flex-wrap justify-left mb4 pv4">
-    {% assign index_page = site.pages | where: "title", "Home" | first %}
-    {% assign practice_slug = '' %}
-    {% for practice in index_page.what_we_do %}
-      {% if practice.title == page.title %}
-        {% assign practice_slug = practice.slug %}
-      {% endif %}
-    {% endfor %}
-    {% assign matching_projects = site.work | where: "practice_area", page.title | where: "preview", true %}
-    {% for project in matching_projects %}
-      <div class="w-33-l w-50-m w-100-s flex-column justify-left items-left mb4 tl pr5-l pl3-m pr3-m">
-        <div class="relative mb4">
-          <img class="relative" src="/assets/images/logos/logo-background.jpg" alt="logo"></img>
-          {% if project.logo %}
-            <img class="absolute top-0 left-0" src="{{ project.logo }}" alt="logo"></img>
-          {% else %}
-            <p class="absolute top-0 left-0 tc mt5 w-100 white f1 v-mid"><b>{{ project.title }}</b></p>
-          {% endif %}
-        </div>
-        <h2 class="f3 sans-serif accent">{{ project.title }}</h2>
-        <div
-          class="mb2 f4 lh-copy"
-          id="{{ project.title }}"
-        >
-          <div 
-            class="project-content"
-            data-excerpt="{{ project.excerpt | escape }}"
-            data-content="{{ project.content | escape }}"
-            data-toggled="false"
-          >
-            {{ project.excerpt }}
-          </div>
-  
-
-            {% if project.content contains "<!-- more -->" %}
-              <span class="mv0 link accent pointer underline-hover w-fit"
-                tabindex="0"
-                role="button"
-                aria-expanded="false"
-                onclick="expandContent(this)"
-                onkeydown="handleKeydown(event, this)"
-              >
-                [expand]</span>
-            {% endif %}
-            {% if project.content contains "<!-- more -->" and project.case_study %}
-              &mdash;
-            {% endif %}
-            {% if project.case_study %}
-              <a href="/{{ practice_slug }}/{{ project.case_study }}/" class="accent link underline-hover case-study-link">Read the case study</a>
-            {% endif %}
-        </div>
-      </div>
-    {% endfor %}
-  </div>
-</section>
-
-<script>
-  function expandContent(toggleEl) {
-    const containerEl = toggleEl.parentElement;
-    const contentDiv = containerEl.querySelector('.project-content');
-    const excerpt = contentDiv.dataset.excerpt;
-    const content = contentDiv.dataset.content;
-    const caseStudyLink = containerEl.querySelector('.case-study-link');
-
-    let toggled = contentDiv.dataset.toggled === "true";
-    if (!toggled) {
-      contentDiv.innerHTML = content;
-      toggleEl.innerHTML = "[collapse]";
-      contentDiv.dataset.toggled = "true";
-      toggleEl.setAttribute("aria-expanded", "true");
-    } else {
-      contentDiv.innerHTML = excerpt;
-      toggleEl.innerHTML = "[expand]";
-      contentDiv.dataset.toggled = "false";
-      toggleEl.setAttribute("aria-expanded", "false");
-    }
-  }
-
-
-  function handleKeydown(event, el) {
-    if (event.key === "Enter" || event.key === " ") {
-      event.preventDefault();
-      expandContent(el);
-    }
-  }
-</script>
