--- a/co-creation-lab.html
+++ b/co-creation-lab.html
@@ -1,30 +1,27 @@
 ---
 layout: practice_area
 title: Co-Creation Lab
-excerpt: "A vision for reclaiming tech for the arts, culture, and activism through holistic co-creation"
+excerpt: "A vision for reclaiming tech for arts, culture, and activism through holistic co-creation"
 image: "/assets/images/social/c-lab.webp"
-description: "We believe building tech that's community-driven makes for richer futures and we're dedicated to helping communities leverage it."  
-tagline: "Tech that fosters access, autonomy, and sustainability"
+description: 
+
+tagline: " We're dedicated to fostering access, autonomy, and sustainability in all our projects"
 services:
-  - title: Project Design & Discovery
+  - title: Project design & discovery
     description: 
-      - "We offer in-depth strategic planning to build a solid foundation for each project, drawing on a human-centered design approach. We will meet with you to scope out the general needs and drill down into specific milestones that can be incrementally built in and tested."
-      - "Our systems thinking approach will ensure your project is able to pivot and change according to your needs without major reworking."
-    list:
-      - Project scoping
-      - Design thinking
-      - Systems thinking
+      - "Drawing on a human-centered design approach, we offer in-depth strategic planning to build a solid foundation for each project. We'll collaborate with you to scope out general needs and to translate those into specific milestones that can be incrementally built and tested."
+    
   - title: Software delivery at all project lifecycle stages
     description: 
-      - "Software delivery at all project lifecycle stages: We can help with rapid prototyping and MVP development, long-term iterative software development, building product roadmaps, gathering user feedback, and week-to-week project management and coordination. We also have in-house expertise in Web Accessibility."
+      - "We can help with rapid prototyping and MVP development, long-term iterative software development, building product roadmaps, gathering user feedback, and week-to-week project management and coordination. We also have in-house expertise in Web Accessibility."
     list:
-      - We primarily focus on dynamic web applications and static websites but have experience working with mobile and desktop app teams when necessary.
-      - Our team has deep knowledge of building and deploying distributed and decentralized applications across a variety of use cases and navigating trade offs between technologies to choose the right protocol for the job.
-      - Our developers have successfully deployed Smart contracts in the Ethereum blockchain ecosystem and have in-house expertise in data oracles
+      - Our primary focus is on dynamic web applications and static websites but have experience working with mobile and desktop app teams
+      - Our team has deep expertise in building and deploying distributed and decentralized applications across a variety of use cases. We can help you navigate trade-offs between technologies to choose the right protocol for the job
+      - We have successfully deployed smart contracts in a variety of blockchain ecosystems, and have in-house expertise in data oracles
   - title: Technical education
     description: 
-      - "We have a track record of producing technical documentation, experience reports, and resources for emerging and established technologies, and general digital literacy initiatives."
-      - "Team members present at conferences and events and are skilled in translating complex technical concepts into easier to understand language."
+      - "We have a track record of producing technical documentation, experience reports, resources for emerging and established technologies, and general digital literacy initiatives."
+      - "Team members present at conferences and events and are skilled in translating complex technical concepts into simpler language."
   - title: Governance
     description: 
       - "Leveraging both our co-operative governance expertise and our experience with DAOs (Decentralized Autonomous Organizations), we advise on how to productively engage communities and pass proposals and resolutions by fostering healthy debate and dialogue."
