--- a/work.html
+++ b/work.html
@@ -41,7 +41,7 @@ order: 3
         <p class="measure-wide mb4">
           {{ practice.description }}
           {% if practice.slug %}
-            <a href="/{{ practice.slug }}/" class="accent link underline-hover">Read more</a>
+            <a href="/{{ practice.slug }}/" class="accent link underline-hover">Read more.</a>
           {% endif %}
         </p>
       </div>
