Add period to tagline

--- a/co-creation-lab.html
+++ b/co-creation-lab.html
@@ -5,7 +5,7 @@ excerpt: "A vision for reclaiming tech for arts, culture, and activism through h
 image: "/assets/images/social/c-lab.webp"
 description: 
 
-tagline: " We're dedicated to fostering access, autonomy, and sustainability in all our projects"
+tagline: "We're dedicated to fostering access, autonomy, and sustainability in all our projects."
 services:
   - title: Project design & discovery
     description: 
