Remove Invalid End Tag for <img>

--- a/work.html
+++ b/work.html
@@ -50,9 +50,9 @@ order: 3
        
           <div class="w-33-l w-50-m w-100-s flex-column justify-left items-left mb4 tl pr5-l pl3-m pr3-m">
             <div class="relative mb4">
-              <img class="relative" src="/assets/images/logos/logo-background.jpg" alt="logo"></img>
+              <img class="relative" src="/assets/images/logos/logo-background.jpg" alt="logo">
               {% if work.logo %}
-                <img class="absolute top-0 left-0" src="{{ work.logo }}" alt="logo"></img>
+                <img class="absolute top-0 left-0" src="{{ work.logo }}" alt="logo">
               {% else %}
                 <p class="absolute top-0 left-0 tc mt5 w-100 white f1 v-mid"><b>{{ work.title }}</b></p>
               {% endif %}
