--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ what_we_do:
     order: 3
   - title: Data Provenance
     description: We enable decentralized trust models and equitable AI innovations rooted in multistakeholder governance and applied cryptography.
+    slug: "data-provenance"
     order: 2
   - title: Co-Creation Lab
     description: Boundary-pushing arts, culture, and activist organizations come to us to make their digital visions a reality.
