mention conf/veri computing

--- a/data-provenance.html
+++ b/data-provenance.html
@@ -14,7 +14,7 @@ services:
     description:
       - "Using proven and emerging tools, we can build data pipelines and processing workflows that ensure data is tamper-free from point of capture, and coming from a known source. Our knowledge of modern cryptography enables us to provide time, source, and even location guarantees for your data."
 
-  - title: TKTK
+  - title: Advanced computing
     description:
-      - "TKTK"
+      - "Hypha team members have experience building bleeding-edge cloud computation solutions, such as confidential and verifiable computing. We can create implementations of these technologies on your cloud systems, to provide trustless services for your users."
 ---
