Update image path for social card

--- a/data-provenance.html
+++ b/data-provenance.html
@@ -2,7 +2,7 @@
 layout: practice_area
 title: Data Provenance
 excerpt: "Where cryptography innovations meet the most defining issues of our time"
-image: "See https://github.com/hyphacoop/hypha.coop/pull/363#issuecomment-2311437932"
+image: "/assets/images/social/data-provenance.webp"
 description:
 tagline: "Enabling decentralized trust models and equitable AI innovations rooted in multistakeholder governance."
 services:
