Switch from **markdown** to <strong> html

--- a/data-provenance.html
+++ b/data-provenance.html
@@ -15,9 +15,9 @@ services:
       - "To operate effectively in fast-paced innovation work, we rely on the team's combined expertise in applied cryptography, traditional & peer-to-peer networking, security practices & infrastructure management, as well as fluency with all common programming languages & the relevant web standards."
       - "Here are some things we've built:"
     list:
-      - **Digital asset authentication** with C2PA and W3C Verifiable Credentials & Decentralized Identifiers
-      - **Verifiable computing** solutions based on hardware attestations and zero-knowledge proofs
-      - **Decentralized preservation** of private and public data with selective disclosure and other advanced requirements
+      - <strong>Digital asset authentication</strong> with C2PA and W3C Verifiable Credentials & Decentralized Identifiers
+      - <strong>Verifiable computing</strong> solutions based on hardware attestations and zero-knowledge proofs
+      - <strong>Decentralized preservation</strong> of private and public data with selective disclosure and other advanced requirements
       - Rapid prototyping & development of authenticated databases, data archiving systems, and verifiable AI supply chain
       - Asset registries and smart contracts on Ethereum and EVM-compatible ledgers, Cosmos CosmWasm ledgers, Hedera hashgraph, Filecoin FVM, and many other Web3 networks
   - title: Fractional engineering leadership
