Normalize bold text in data-provenance.html

--- a/data-provenance.html
+++ b/data-provenance.html
@@ -18,8 +18,8 @@ services:
       - <strong>Digital asset authentication</strong> with C2PA and W3C Verifiable Credentials & Decentralized Identifiers
       - <strong>Verifiable computing</strong> solutions based on hardware attestations and zero-knowledge proofs
       - <strong>Decentralized preservation</strong> of private and public data with selective disclosure and other advanced requirements
-      - Rapid prototyping & development of authenticated databases, data archiving systems, and verifiable AI supply chain
-      - Asset registries and smart contracts on Ethereum and EVM-compatible ledgers, Cosmos CosmWasm ledgers, Hedera hashgraph, Filecoin FVM, and many other Web3 networks
+      - <strong>Rapid prototyping & development</strong> of authenticated databases, data archiving systems, and verifiable AI supply chain
+      - <strong>Asset registries and smart contracts</strong> on Ethereum and EVM-compatible ledgers, Cosmos CosmWasm ledgers, Hedera hashgraph, Filecoin FVM, and many other Web3 networks
   - title: Fractional engineering leadership
     description:
       - "Projects we engage with are oftentimes context heavy and technically complex from product vision to implementation. We can work embedded in your organization in engineering leadership positions, whether that means to manage the entire technical operation or to work alongside your existing engineering team. Our engineering leaders are experienced in bootstrapping from scratch and managing long-running technical operations, including staffing key roles for data provenance projects, representing your organization with vendors and other stakeholders, and providing support to fundraising and product demo activities."
